# nomade

./: .gitignore  README.md  nomade.toml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
docs/: CONTRIBUTING.md  ROADMAP.md
mnt/user-data/outputs/: cli.py  pyproject.toml
nomade/: cli.py
nomade/analysis/: __init__.py  similarity.py
nomade/collectors/: __init__.py  base.py  job_metrics.py
nomade/db/: schema.sql
nomade/ml/: __init__.py  ensemble.py  gnn_torch.py
nomade/viz/: server.py
paper/: paper.md
paper/figures/: make_dashboard_panel.py
scripts/: nomade.sh
vm-simulation/: README.md  Vagrantfile  nomade-test.toml  setup-slurm.sh  start-job-generator.sh
vm-simulation/.vagrant/machines/default/libvirt/: action_provision  created_networks  id  private_key
vm-simulation/jobs/: job-generator.py
vm-simulation/sample-data/: README.md
vm-simulation/simulation/: metrics-generator.py
vm-simulation/slurm/: cgroup.conf  gres.conf  slurm-large.conf  slurm-minimal.conf  slurm-small.conf  slurm.conf
