[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomade"
version = "0.2.0"
description = "A lightweight HPC monitoring and predictive analytics tool"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Joao Tonini", email = "jtonini@richmond.edu"}
]
maintainers = [
    {name = "Joao Tonini", email = "jtonini@richmond.edu"}
]
keywords = [
    "hpc",
    "monitoring",
    "slurm",
    "cluster",
    "predictive-analytics",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "rich>=13.0",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
prediction = [
    "scikit-learn>=1.0",
    "torch>=2.0",
    "torch-geometric>=2.0",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "websockets>=11.0",
]
all = [
    "nomade[prediction,dashboard]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "httpx>=0.24",  # For testing FastAPI
]

[project.scripts]
nomade = "nomade.cli:main"

[project.urls]
Homepage = "https://github.com/jtonini/nomade"
Documentation = "https://github.com/jtonini/nomade/docs"
Repository = "https://github.com/jtonini/nomade"
Issues = "https://github.com/jtonini/nomade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nomade*"]

[tool.setuptools.package-data]
nomade = [
    "db/*.sql",
    "viz/static/**/*",
]

# ============================================
# TOOL CONFIGURATIONS
# ============================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["nomade"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["nomade"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
